# RSY

./: .gitignore  Cargo.toml  README.md  mprocs.yaml  variables_prod  variables_test
.cargo/: config.toml
carlettos_api/: Cargo.toml  Rocket.toml  run_prod.sh  run_test.nu  run_test.sh
carlettos_api/src/: cors.rs  db.rs  error.rs  main.rs  prelude.rs
carlettos_api/src/utils/: try_froms.rs
carlettos_chess/: Cargo.toml
carlettos_chess/src/: ability.rs  board.rs  card.rs  chess_controller.rs  lib.rs  pattern.rs  piece.rs  prelude.rs
carlettos_web/: Cargo.toml  Trunk.toml  c2048.css  carlettos_chess.css  chess.css  game_of_life.css  index.html  log.txt  run_prod.sh  run_test.nu  run_test.sh  style.scss  votes.css
carlettos_web/src/: controllers.rs  main.rs  models.rs  state.rs  sub_api.rs
carlettos_web/src/cells/: cell.rs
carlettos_web/src/components/: task_form.rs
carlettos_web/src/pages/: c2048.rs  carlettos_chess.rs  chess.rs  chess_games.rs  currently_programming.rs  game_of_life.rs  home.rs  todo_app.rs  votacion.rs
carlettos_web/src/pages/c2048/: c2048_leader_board.rs  c2048_leaderboard.rs
chess_api/: Cargo.toml
chess_api/src/: lib.rs
db/: history.txt  init.surreal
db/storage/main.db/: 000013.sst  IDENTITY  LOG  LOG.old.1704222790439399  MANIFEST-000010
helpers/: sprite_into_tiles.py
