[package]
name = "carlettos_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.18", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chess_api = { path = "../chess_api" }
serde_json = "1.0"
surrealdb = "1.0.2"
thiserror = "1.0"
dmp = "0.2"