[package]
name = "carlettos_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.1", features = ["json", "tls"] }
tokio = { version = "=1.32.0", features = ["full"] }
chrono = { version = "=0.4.38", features = ["serde"] }
serde = { version = "=1.0.210", features = ["derive"] }
chess_api = { path = "../chess_api" }
serde_json = "=1.0.128"
surrealdb = "=1.0.2"
thiserror = "=1.0.63"
dmp = "=0.2.0"