[package]
name = "carlettos_web"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen-futures = "0.4"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
reqwasm = "0.5"
serde = { version ="*", features = ["derive"] }
chrono = { version = "*", features = ["serde", "wasmbind"] }
chess_api = { path = "../chess_api" }
serde_json = "1.0"
rand = "0.8"
gloo = "0.11"
log = "0.4"
wasm-logger = "0.2"
csta = "1"
csta_derive = "1"

carlettos_chess = { path = "../carlettos_chess" }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "css",
]